| Summary: | ASTERISK-26857: chan_pjsip: Dialplan function race condition | ||||||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |||||
| Date Opened: | 2017-03-12 09:21:46 | Date Closed: | 2017-03-14 13:36:35 | ||||
| Priority: | Minor | Regression? | No | ||||
| Status: | Closed/Complete | Components: | Channels/chan_pjsip | ||||
| Versions: | 13.14.0 14.3.0 | Frequency of Occurrence | |||||
| Related Issues: |
| ||||||
| Environment: | Attachments: | ||||||
| Description: | When querying PJSIP specific information on a channel it is possible for the underlying session to no longer have a pointer to the channel itself. If this occurs then kaboom. | ||||||
| Comments: | By: Friendly Automation (friendly-automation) 2017-03-14 13:36:36.900-0500 Change 5166 merged by Joshua Colp: chan_pjsip: Don't assume a session will have a channel. [https://gerrit.asterisk.org/5166|https://gerrit.asterisk.org/5166] By: Friendly Automation (friendly-automation) 2017-03-14 14:08:59.469-0500 Change 5167 merged by zuul: chan_pjsip: Don't assume a session will have a channel. [https://gerrit.asterisk.org/5167|https://gerrit.asterisk.org/5167] By: Friendly Automation (friendly-automation) 2017-03-15 05:23:21.244-0500 Change 5165 merged by Joshua Colp: chan_pjsip: Don't assume a session will have a channel. [https://gerrit.asterisk.org/5165|https://gerrit.asterisk.org/5165] | ||||||